syntax = "proto3";

package csw_protobuf;

message PbCommandList {
    repeated PbCommand commands = 1;
}

message PbCommand {
    PbId id = 1;
    string name = 2;
}

message PbId {
    string value = 1;
}

message PbSuccess {
    PbId id = 1;
    string value = 2;
}

message PbFailed {
    PbId id = 1;
    string value = 2;
}

message PbCommandResponse {
    oneof commandResponse {
        PbSuccess success = 1;
        PbFailed failed = 2;
    }
}

message PbAggregateResponse {
    repeated PbCommandResponse commandResponses = 1;
}

enum PbStepStatus {
     Pending = 0;
     InFlight = 1;
     Finished = 2;
}

message PbStep {
    PbCommand command = 1;
    PbStepStatus stepStatus = 2;
    bool hasBreakPoint = 3;
}

message PbSequence {
    repeated PbStep steps = 1;
}